--- a/src/scss/layout/_logo.scss
+++ b/src/scss/layout/_logo.scss
@@ -218,3 +218,9 @@ body.utk-menu-open {
 
   }
 }
+
+body.utk-search-open {
+  .utk-search {
+    z-index: 999;
+  }
+}
